# wgpu

./: .deny.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REVIEW-CHECKLIST.md  clippy.toml  typos.toml
.config/: nextest.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  generate.yml  lazy.yml  publish.yml  shaders.yml
benches/: Cargo.toml
benches/benches/: bind_groups.rs  computepass.rs  renderpass.rs  resource_creation.rs  root.rs  shader.rs
deno_webgpu/: Cargo.toml  adapter.rs  bind_group.rs  bind_group_layout.rs  binding.rs  buffer.rs  bundle.rs  byow.rs  command_buffer.rs  command_encoder.rs  compute_pass.rs  compute_pipeline.rs  device.rs  error.rs  lib.rs  pipeline.rs  pipeline_layout.rs  query_set.rs  queue.rs  render_bundle.rs  render_pass.rs  render_pipeline.rs  sampler.rs  shader.rs  surface.rs  texture.rs  webidl.rs
etc/specs/: ray_tracing.md
examples/: README.md
examples/features/: Cargo.toml
examples/features/src/: framework.rs  lib.rs  main.rs
examples/src/texture_arrays/: mod.rs
examples/standalone/01_hello_compute/: Cargo.toml
examples/standalone/02_hello_window/: Cargo.toml
naga/: Cargo.toml
naga-cli/: Cargo.toml
naga/fuzz/: Cargo.toml
naga/fuzz/fuzz_targets/: glsl_parser.rs
naga/src/: lib.rs  span.rs
naga/src/back/: pipeline_constants.rs
naga/src/compact/: expressions.rs  mod.rs
naga/src/proc/: constant_evaluator.rs
naga/src/valid/: expression.rs  handles.rs
naga/tests/: example_wgsl.rs  snapshots.rs  wgsl_errors.rs
naga/tests/in/: abstract-types-return.wgsl  abstract-types-var.param.ron  abstract-types-var.wgsl  access.param.ron  atomicCompareExchange-int64.param.ron  atomicCompareExchange-int64.toml  atomicCompareExchange.param.ron  atomicCompareExchange.toml  atomicOps-float32.param.ron  atomicOps-float32.toml  atomicOps-int64-min-max.param.ron  atomicOps-int64-min-max.toml  atomicOps-int64.param.ron  atomicOps-int64.toml  atomicTexture-int64.param.ron  atomicTexture-int64.toml  atomicTexture.param.ron  atomicTexture.toml  binding-arrays.param.ron  binding-arrays.toml  binding-buffer-arrays.param.ron  binding-buffer-arrays.toml  bits.param.ron  bits.toml  boids.param.ron  boids.toml  bounds-check-dynamic-buffer.param.ron  bounds-check-image-restrict.param.ron  bounds-check-image-rzsw.param.ron  bounds-check-restrict.param.ron  bounds-check-zero-atomic.param.ron  bounds-check-zero.param.ron  break-if.param.ron  collatz.param.ron  const-exprs.wgsl  const_assert.param.ron  constructors.param.ron  cubeArrayShadow.param.ron  debug-symbol-large-source.param.ron  dualsource.param.ron  (+59 more)
naga/xtask/: Cargo.toml
naga/xtask/src/: main.rs  validate.rs
player/: Cargo.toml
player/src/: lib.rs
player/tests/: test.rs
player/tests/data/: bind-group.ron  zero-init-buffer.ron
tests/: Cargo.toml
tests/gpu-tests/: bgra8unorm_storage.rs  buffer_copy.rs  dispatch_workgroups_indirect.rs  oob_indexing.rs  pipeline_cache.rs  push_constants.rs  root.rs  write_texture.rs
tests/gpu-tests/binding_array/: buffers.rs  storage_textures.rs
tests/gpu-tests/occlusion_query/: mod.rs
tests/gpu-tests/ray_tracing/: as_build.rs
tests/gpu-tests/regression/: issue_4024.rs
tests/gpu-tests/shader/: numeric_builtins.rs
tests/gpu-tests/shader_view_format/: mod.rs
tests/gpu-tests/texture_binding/: mod.rs
tests/gpu-tests/vertex_formats/: mod.rs
tests/gpu-tests/vertex_indices/: mod.rs
tests/src/: expectations.rs  image.rs  init.rs  lib.rs  params.rs  run.rs
tests/tests/: buffer.rs  buffer_usages.rs  cloneable_types.rs  compute_pass_ownership.rs  device.rs  dispatch_workgroups_indirect.rs  external_texture.rs  life_cycle.rs  mem_leaks.rs  oob_indexing.rs  poll.rs  render_pass_ownership.rs  root.rs  samplers.rs  transition_resources.rs
tests/tests/binding_array/: buffers.rs  mod.rs  sampled_textures.rs  samplers.rs  storage_textures.rs  validation.rs
tests/tests/ray_tracing/: as_create.rs  as_use_after_free.rs  mod.rs  shader.rs  shader.wgsl
tests/tests/regression/: issue_3457.rs  issue_4122.rs  issue_6827.rs
tests/tests/shader/: array_size_overrides.rs  mod.rs  workgroup_size_overrides.rs  zero_init_workgroup_mem.rs
tests/tests/texture_binding/: mod.rs
tests/tests/vertex_formats/: mod.rs
tests/tests/vertex_indices/: mod.rs
tests/validation-tests/: noop.rs
tests/validation-tests/api/: binding_arrays.rs  mod.rs  (+1 more)
tests/validation_tests/: noop.rs  root.rs
wgpu/: Cargo.toml
wgpu-core/: Cargo.toml  build.rs
wgpu-core/platform-deps/windows-linux-android/: Cargo.toml
wgpu-core/src/: binding_model.rs  pipeline.rs  present.rs
wgpu-core/src/command/: compute.rs  ray_tracing.rs  render.rs  timestamp_writes.rs  transfer.rs
wgpu-core/src/device/: global.rs  mod.rs  queue.rs  ray_tracing.rs  resource.rs
wgpu-hal/: Cargo.toml
wgpu-hal/examples/: raw-gles.rs
wgpu-hal/examples/halmark/: main.rs
wgpu-hal/examples/ray-traced-triangle/: main.rs
wgpu-hal/src/: lib.rs
wgpu-hal/src/auxil/: renderdoc.rs
wgpu-hal/src/dx12/: adapter.rs  command.rs  device.rs  instance.rs  mod.rs  sampler.rs  shader_compilation.rs
wgpu-hal/src/gles/: adapter.rs  device.rs  egl.rs  mod.rs  queue.rs
wgpu-hal/src/metal/: adapter.rs  device.rs  mod.rs  surface.rs
wgpu-hal/src/noop/: mod.rs
wgpu-hal/src/vulkan/: adapter.rs  device.rs  mod.rs
wgpu-info/: Cargo.toml
wgpu-info/src/: human.rs  report.rs
wgpu-macros/: Cargo.toml
wgpu-types/: Cargo.toml
wgpu-types/src/: features.rs  instance.rs  lib.rs
wgpu/src/: cmp.rs  dispatch.rs  lib.rs  macros.rs
wgpu/src/api/: adapter.rs  blas.rs  buffer.rs  command_buffer.rs  command_encoder.rs  common_pipeline.rs  device.rs  instance.rs  mod.rs  pipeline_cache.rs  queue.rs  render_bundle_encoder.rs  render_pass.rs  render_pipeline.rs  shader_module.rs  surface.rs  surface_texture.rs  texture.rs  texture_view.rs  tlas.rs
wgpu/src/backend/: webgpu.rs  wgpu_core.rs
wgpu/src/util/: belt.rs  device.rs  encoder.rs  mod.rs  texture_blitter.rs
xtask/: Cargo.toml
xtask/src/: check_feature_dependencies.rs  main.rs  run_wasm.rs  test.rs
(+61 files in other folders)
