# Copyright 2018-2024 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_webgpu"
version = "0.146.0"
authors = ["the Deno authors"]
edition.workspace = true
license = "MIT"
readme = "README.md"
repository.workspace = true
description = "WebGPU implementation for Deno"

[lib]
path = "lib.rs"

# We make all dependencies conditional on not being wasm,
# so the whole workspace can built as wasm.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu-core = { workspace = true, features = [
    "raw-window-handle",
    "trace",
    "replay",
    "serde",
    "strict_asserts",
    "wgsl",
    "gles",
] }
wgpu-types = { workspace = true, features = ["serde"] }

deno_core.workspace = true
raw-window-handle = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }

# Apple Platforms
#
# We want the Metal backend.
[target.'cfg(target_vendor = "apple")'.dependencies]
wgpu-core = { workspace = true, features = ["metal"] }

# Windows
#
# We want the DX12 backend.
[target.'cfg(windows)'.dependencies]
wgpu-core = { workspace = true, features = ["dx12"] }

# Windows and Unix (not Emscripten)
#
# We want the Vulkan backend.
[target.'cfg(any(windows, all(unix, not(target_os = "emscripten"))))'.dependencies]
wgpu-core = { workspace = true, features = ["vulkan"] }
