[package]
name = "player"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "WebGPU trace player"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
publish = false

[lib]
name = "player"
path = "src/lib.rs"
test = false

[[bin]]
name = "play"
path = "src/bin/play.rs"
test = false

[dependencies]
wgpu-types = { workspace = true, features = ["serde"] }

env_logger.workspace = true
log.workspace = true
raw-window-handle.workspace = true
ron.workspace = true
winit = { workspace = true, optional = true }

# Non-Webassembly
#
# We are a non-wasm only crate, and this allows us to compile.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wgpu-core]
workspace = true
features = [
    "replay",
    "raw-window-handle",
    "strict_asserts",
    "wgsl",
    "metal",
    "dx12",
    "vulkan",
    "gles",
]

[dev-dependencies]
serde.workspace = true
